@@ -1,3 +1,25 @@
+/*
+ * The MIT License
+ * Copyright (c) 2015-2020 CSC - IT Center for Science, http://www.csc.fi
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in
+ * all copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ * THE SOFTWARE.
+ */
 package fi.csc.idp.stepup.impl;
 
 import java.io.IOException;
@@ -39,7 +61,7 @@ public class MailChallengeSenderTest {
         mailChallengeSender.setHost("127.0.0.1");
         mailChallengeSender.setSMTPAuth("false");
         mailChallengeSender.setSMTPTtls("true");
-        mailChallengeSender.setPort(new Integer(mailServer.getSmtp().getPort()).toString());
+        mailChallengeSender.setPort(Integer.valueOf(mailServer.getSmtp().getPort()).toString());
         mailChallengeSender.setSubjectField("subjectField %s");
         mailChallengeSender.setUserName("from");
         mailChallengeSender.setPassword("password");
@@ -53,5 +75,4 @@ public class MailChallengeSenderTest {
         Assert.assertEquals(mailServer.getReceivedMessages()[0].getSubject(), "subjectField 0");
 
     }
-
 }
